syntax = "proto3";

service Config {
	rpc Get(ConfigRequest) returns (ConfigResponse) {}
	rpc Ping(PingRequest) returns (PongResponse) {}
}

message PingRequest{}

message PongResponse{
	string service_name = 20;
	string current_environment = 21;
}

message ConfigRequest {}

message ConfigResponse {
	Conf config = 1;
}

message App {
	string env = 1;
}

message Database {
	DatabaseConf game_master = 1;
	DatabaseConf game_slave = 2;
	DatabaseConf trade_master = 3;
	DatabaseConf trade_slave = 4;
	DatabaseConf member_master = 5;
	DatabaseConf member_slave = 6;
	DatabaseConf test = 7;
}

// Database 資料庫設定
message DatabaseConf {
	string db = 1;
	string host_master = 2;
	string host_slave = 3;
	string port = 4;
	string username = 5;
	string password = 6;
}

message Cache {
	CacheConf both_master = 1;
	CacheConf both_slave = 2;
	CacheConf game_master = 3;
	CacheConf game_slave = 4;
	CacheConf trade_master = 5;
	CacheConf trade_slave = 6;
	CacheConf member_master = 7;
	CacheConf member_slave = 8;
	CacheConf test = 9;
}

// Cache 快取設定
message CacheConf {
	string host = 1;
	string port = 2;
	string password = 3;
}

message API {
	APIConf green = 1;
	APIConf durian = 2;
}

// API 資訊
message APIConf {
	string ip = 1;
	string host = 2;
	string port = 3;
	string api_key = 4;
}

// Conf 設定檔
message Conf {
	App app = 1;
	Database database = 2;
	Cache cache = 3;
	API api = 4;
}

